gitlab/00-gitlab-namespace.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: gitlab
  labels:
    name: gitlab
