gitlab/06-gitlab-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gitlab
  namespace: gitlab
  labels:
    app: gitlab
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gitlab
  template:
    metadata:
      labels:
        app: gitlab
    spec:
      containers:
      - name: gitlab
        image: gitlab/gitlab-ce:latest
        ports:
        - containerPort: 80
          name: 80-http
        - containerPort: 22
          name: 22-ssh
        volumeMounts:
        - mountPath: /etc/gitlab
          name: gitlab-config
        - mountPath: /var/log/gitlab
          name: gitlab-logs
        - mountPath: /var/opt/gitlab
          name: gitlab-data
      volumes:
        - name: gitlab-config
          persistentVolumeClaim:
            claimName: gitlab-claim0
        - name: gitlab-logs
          persistentVolumeClaim:
            claimName: gitlab-claim1
        - name: gitlab-data
          persistentVolumeClaim:
            claimName: gitlab-claim2
      restartPolicy: Always
