gitlab/01-gitlab-nginx-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gitlab-ingress
  namespace: gitlab
spec:
  rules:
    - host: gitlab.local # change to the same domain that the external dns server is resolving to the external Ingress IP.
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: gitlab
                port:
                  number: 80
